src/pages/Clicker/Clicker.module.css
@import url('../../assets//fonts/fontbenzin.css');

.clickerBackground {
    background: url('../../assets/images/backgrounds/Clickerbg.png') no-repeat center;
    background-size: cover;
    background-position: center;
    background-attachment: fixed;
    font-family: 'Benzin', sans-serif;
}

.starInfo {
    display: block;
    width: 35px;
    height: 35px;
    color: #fff;
}

.star {
    display: block;
    width: 300px;
    height: 300px;
    justify-self: center;
    align-self: center;
    user-select: none;
}


.actionBtn {
    user-select: none;
    background: transparent;
    border: none;
    width: 350px;
    height: 350px;
}

.actionCount {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    font-size: 50px;
    margin-top: 100px;
}

.actionStamina {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.staminaWrapper {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 5px;
}

.stamina {
    font-size: 12px;
}


.light {
    display: block;
    height: 20px;
    width: 15px;
}

.staminaProgessContainer {
    display: flex;
    flex-direction: column;
    flex: 1;
}

.progressBar {

}

